[package]
name = "rtc-clock"
version = "0.1.0"
authors = ["burumdev <burum.gh@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "rtc-clock"
test = false
bench = false

[dependencies]
panic-halt = "1.0.0"
nb = "1.1.0"
embedded-hal = "1.0"
ds3231 = "0.3.0"
chrono = { version = "0.4.41", default-features = false }
ufmt = "0.2.0"
avr-device = { version = "0.7.0", features = ["atmega328p"] }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "fafaf587a32a4500239fd073f89d1b9c36b48092"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
